[sonar] Replace Collections.toList() as appropriate